// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default > check if docs are created 1`] = `
"
--- START: DB UX Copilot Instructions – do not edit below ---

> **NOTE**: Always use "DB UX" components and variables as project's conventions
# @db-ux/components
- use y for node_modules/@db-ux/components/test.md


# @db-ux/foundations
- use x for node_modules/@db-ux/foundations/test.md

--- END: DB UX Copilot Instructions – do not edit above ---
		"
`;

exports[`default > check if docs are created 2`] = `
"
--- START: DB UX Amazon Q Instructions – do not edit below ---

> **NOTE**: Always use "DB UX" components and variables as project's conventions
# @db-ux/components
- use y for node_modules/@db-ux/components/test.md


# @db-ux/foundations
- use x for node_modules/@db-ux/foundations/test.md

--- END: DB UX Amazon Q Instructions – do not edit above ---
"
`;

exports[`default > check if docs are created from pnpm symlinked packages 1`] = `
"
--- START: DB UX Copilot Instructions – do not edit below ---

> **NOTE**: Always use "DB UX" components and variables as project's conventions
# @db-ux/test-symlink-package
# Symlinked Package Instructions

This is a test package accessed via symlink (simulating pnpm structure).

--- END: DB UX Copilot Instructions – do not edit above ---
		"
`;

exports[`default > check if docs are created from pnpm symlinked packages 2`] = `
"
--- START: DB UX Amazon Q Instructions – do not edit below ---

> **NOTE**: Always use "DB UX" components and variables as project's conventions
# @db-ux/test-symlink-package
# Symlinked Package Instructions

This is a test package accessed via symlink (simulating pnpm structure).

--- END: DB UX Amazon Q Instructions – do not edit above ---
"
`;
